crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_squashed_codes.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..16,
                codes: [
                    Code {
                        code: "F401F841",
                        range: 8..16,
                    },
                ],
            },
        ),
    ),
)
