crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_trailing_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: directive
---
Ok(
    Some(
        ParsedNoqa {
            warnings: [],
            directive: Codes(
                Codes {
                    range: 0..12,
                    codes: [
                        Code {
                            code: "F401",
                            range: 8..12,
                        },
                    ],
                },
            ),
        },
    ),
)
