crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_all_trailing_comment.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "ParsedFileExemption::try_extract(TextRange::up_to(source.text_len()), source,)"
---
Err(
    InvalidSuffix,
)
