crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_all_trailing_comment_no_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: exemption
---
Ok(
    Some(
        ParsedNoqa {
            warnings: [],
            directive: All(
                All {
                    range: 0..12,
                },
            ),
        },
    ),
)
