crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_code_leading_comment.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: exemption
---
Ok(
    Some(
        ParsedNoqa {
            warnings: [],
            directive: Codes(
                Codes {
                    range: 18..36,
                    codes: [
                        Code {
                            code: "F401",
                            range: 32..36,
                        },
                    ],
                },
            ),
        },
    ),
)
