crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_code_trailing_comment.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: exemption
---
Ok(
    Some(
        NoqaLexerOutput {
            warnings: [],
            directive: Codes(
                Codes {
                    range: 0..18,
                    codes: [
                        Code {
                            code: "F401",
                            range: 14..18,
                        },
                    ],
                },
            ),
        },
    ),
)
