crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_code_trailing_comment_no_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "ParsedFileExemption::try_extract(TextRange::up_to(source.text_len()), source,)"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..18,
                codes: [
                    Code {
                        code: "F401",
                        range: 14..18,
                    },
                ],
            },
        ),
    ),
)
