crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_codes.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "ParsedFileExemption::try_extract(source, TextSize::default())"
snapshot_kind: text
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..24,
                codes: [
                    Code {
                        code: "F401",
                        range: 14..18,
                    },
                    Code {
                        code: "F841",
                        range: 20..24,
                    },
                ],
            },
        ),
    ),
)
